Fix example tests

--- a/examples/example-dockpanel-iife/index.html
+++ b/examples/example-dockpanel-iife/index.html
@@ -8,19 +8,19 @@
 
   <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
 
-  <script src="../../packages/algorithm/dist/index.min.js"></script>
-  <script src="../../packages/collections/dist/index.min.js"></script>
-  <script src="../../packages/properties/dist/index.min.js"></script>
-  <script src="../../packages/messaging/dist/index.min.js"></script>
-  <script src="../../packages/signaling/dist/index.min.js"></script>
-  <script src="../../packages/disposable/dist/index.min.js"></script>
-  <script src="../../packages/domutils/dist/index.min.js"></script>
-  <script src="../../packages/coreutils/dist/index.min.js"></script>
-  <script src="../../packages/keyboard/dist/index.min.js"></script>
-  <script src="../../packages/commands/dist/index.min.js"></script>
-  <script src="../../packages/dragdrop/dist/index.min.js"></script>
-  <script src="../../packages/virtualdom/dist/index.min.js"></script>
-  <script src="../../packages/widgets/dist/index.min.js"></script>
+  <script src="../../packages/algorithm/dist/index.js"></script>
+  <script src="../../packages/collections/dist/index.js"></script>
+  <script src="../../packages/properties/dist/index.js"></script>
+  <script src="../../packages/messaging/dist/index.js"></script>
+  <script src="../../packages/signaling/dist/index.js"></script>
+  <script src="../../packages/disposable/dist/index.js"></script>
+  <script src="../../packages/domutils/dist/index.js"></script>
+  <script src="../../packages/coreutils/dist/index.js"></script>
+  <script src="../../packages/keyboard/dist/index.js"></script>
+  <script src="../../packages/commands/dist/index.js"></script>
+  <script src="../../packages/dragdrop/dist/index.js"></script>
+  <script src="../../packages/virtualdom/dist/index.js"></script>
+  <script src="../../packages/widgets/dist/index.js"></script>
 
   <link href="./style/index.css" rel="stylesheet">
   <script src="./src/index.js"></script>
