--- a/examples/example-dockpanel-amd/index.html
+++ b/examples/example-dockpanel-amd/index.html
@@ -7,6 +7,7 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <title>example-dockpanel-iife</title>
 
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
