Add empty DockLayout test and more UTF-8

--- a/examples/example-datagrid/index.html
+++ b/examples/example-datagrid/index.html
@@ -6,6 +6,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <script type="text/javascript" src="build/bundle.example.js"></script>
 </head>
 <body>
