--- a/examples/example-menubar/index.html
+++ b/examples/example-menubar/index.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <script type="text/javascript" src="build/bundle.example.js"></script>
-  <title>Menubar Example</title>
+  <title>MenuBar Example</title>
 </head>
 <body>
 </body>
